@@ -25,26 +25,27 @@
 # - Finish config Fastcgi
 
 <IfModule mod_fastcgi.c>
-FastCgiWrapper On
-FastCgiIpcDir /var/lib/apache2/fastcgi
-FastCgiConfig -minProcesses 1 -maxProcesses 10 -singleThreshold 100
-              #-killInterval 300 \
-              #-autoUpdate \
-              #-idle-timeout 240 \
-              #-pass-header HTTP_AUTHORIZATION
+	FastCgiWrapper On
+	FastCgiIpcDir /var/lib/apache2/fastcgi
+	FastCgiConfig -minProcesses 1 -maxProcesses 10 -singleThreshold 100
+	              #-killInterval 300 \
+	              #-autoUpdate \
+	              #-idle-timeout 240 \
+	              #-pass-header HTTP_AUTHORIZATION
 
-FastCgiServer {PHP_STARTER_DIR}/master/php{PHP_VERSION}-fcgi-starter -user {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_UID} -group {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_GID}
+	FastCgiServer {PHP_STARTER_DIR}/master/php{PHP_VERSION}-fcgi-starter -user {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_UID} -group {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_GID}
 
-#
-# PHP{PHP_VERSION} SUPPORT
-#
+	#
+	# PHP{PHP_VERSION} SUPPORT
+	#
 
-AddHandler php-fastcgi .php .php{PHP_VERSION}
+	AddHandler php-fastcgi .php .php{PHP_VERSION}
 
-<Location /php{PHP_VERSION}/php{PHP_VERSION}-fcgi-starter>
-    SetHandler fastcgi-script
-    Options +ExecCGI
-</Location>
+	<Location /php{PHP_VERSION}/php{PHP_VERSION}-fcgi-starter>
+	    SetHandler fastcgi-script
+	    Options +ExecCGI
+	</Location>
 
-Action php-fastcgi /php{PHP_VERSION}/php{PHP_VERSION}-fcgi-starter
-AddType application/x-httpd-php .php .php{PHP_VERSION}
+	Action php-fastcgi /php{PHP_VERSION}/php{PHP_VERSION}-fcgi-starter
+	AddType application/x-httpd-php .php .php{PHP_VERSION}
+</IfModule>
