@@ -22,7 +22,6 @@
 ########################################################################
 #
 # @TODO :
-# - Finish PHP5 Support
 # - Finish config Fastcgi
 <IfDefine FCGID>
 	<IfModule mod_fastcgi.c>
