@@ -842,12 +842,12 @@ SQL_QUERY;
 		global $cfg;
 		if ($rs -> fields['domain_status'] == $cfg['ITEM_OK_STATUS'])
 		{
-				$status_icon = "ok.gif";
+				$status_icon = "ok.png";
 				$status_url = "change_status.php?domain_id=".$rs -> fields['domain_id'];
 
 		} else if ($rs -> fields['domain_status'] == $cfg['ITEM_DISABLED_STATUS']) {
 
-				$status_icon = "disabled.gif";
+				$status_icon = "disabled.png";
 				$status_url = "change_status.php?domain_id=".$rs -> fields['domain_id'];
 
 
@@ -858,13 +858,13 @@ SQL_QUERY;
 				  	$rs -> fields['domain_status'] == $cfg['ITEM_TODISABLED_STATUS'] ||
 					$rs -> fields['domain_status'] == $cfg['ITEM_DELETE_STATUS']){
 
-				$status_icon = "reload.gif";
+				$status_icon = "reload.png";
 				$status_url = "#";
 
 
 		}else {
 
-				$status_icon = "error.gif";
+				$status_icon = "error.png";
 				$status_url = "domain_details.php?domain_id=".$rs -> fields['domain_id'];
 
 		}
